--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br><div  id="align"><center><a href="grretings.html">HAPPY BIRTHDAY TO MY BAAFF</a></center></div>
 
     <center>
-    	<img src="C:\Users\user\Desktop\family.jpg" width="360px" height="200px"></center>
+    	<img src="family.jpg" width="360px" height="200px"></center>
 
 
 </body>
