--- a/grretings.html
+++ b/grretings.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="newstyle.css">
   <title>HAPPY BIRTHDAY CARD</title>
 </head>
-<body background="C:\Users\user\Desktop\style.jpeg">
+<body background="style.jpeg">
 	<center>
 			<div class="key1">
 	<h1>HAPPY BIRTHDAY BABA</h1></div>
